tooling/nargo_cli/tests/snapshots/execution_success/regression_7143/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u32, array: [bool; 1]) -> pub bool {
    !array[x]
}
