tooling/nargo_cli/tests/snapshots/execution_success/regression_7143/execute__tests__force_brillig_false_inliner_9223372036854775807_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[regression_7143] Circuit output: Field(1)
----- stderr -----
