tooling/nargo_cli/tests/snapshots/execution_success/regression_7143/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[regression_7143] Circuit output: 1
